--- a/css/login.css
+++ b/css/login.css
@@ -23,8 +23,9 @@
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    border: 1px solid var(--color-secondary);
+    /*border: 3px solid var(--color-secondary);*/
     border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     padding: 2rem 4rem 4rem 4rem;
     margin-top: 4rem;
     margin-bottom: 4rem;
