--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,11 @@ header {
     padding: 1rem;
 }
 
+nav p {
+    text-align: right;
+    line-height: 1.2rem;
+}
+
 .logo__img {
     width: 3.6rem;
     height: auto;
@@ -132,6 +137,7 @@ header form span {
 
 .post__container {
     margin-top: 2.4rem;
+    margin-bottom: 4.8rem;
 }
 
 .post__container h3 {
@@ -140,6 +146,7 @@ header form span {
 }
 
 .post__category {
+    margin-top: 2rem;
     color: var(--color-keempat);
     font-weight: 600;
 }
@@ -154,6 +161,7 @@ header form span {
 }
 
 #read-more {
+    margin-left: 0.2rem;
     color: var(--color-tertiary);
     font-weight: 600;
     border-bottom: 1px solid var(--color-tertiary);
