--- a/css/create.css
+++ b/css/create.css
@@ -29,12 +29,19 @@ label {
 }
 
 textarea {
+    /*display: none;*/
+    
     font-family: "Lora", serif;
     color: var(--color-text-dark);
     font-size: 1rem;
+    height: 16rem;
+    border: 1px solid var(--color-secondary);
+    border-radius: 6px;
+    padding: 0.6rem 0.8rem;
+    
 }
 
-.container > div:not(.user__action) {
+.container > div:not(.user__action, .ql-toolbar) {
     display: flex;
     flex-direction: column;
 }
@@ -51,24 +58,39 @@ select {
     padding: 0.4rem 0.5rem;
 }
 
-textarea {
-    border: 1px solid var(--color-secondary);
-    border-radius: 6px;
-    padding: 0.6rem 0.8rem;
+.tags__option {
+    margin-top: 1rem;
 }
 
-.tags__container button {
-    font-weight: 500;
-    text-align: center;
+.tags__container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.2rem;
+}
+
+.tag__btn.selected {
+    font-weight: 600;
     border-radius: 6px;
-    margin-bottom: 0.2rem;
     padding: 0.2rem 1rem;
+    background-color: var(--color-keempat);
+    color: var(--color-text-white);
 }
 
-.tags__container button:hover {
+.tag__btn:not(.selected):hover {
     font-weight: 600;
     background-color: var(--color-keempat);
     color: var(--color-text-white);
+    transition: var(--transition);
+}
+
+.tag__btn:not(.selected) {
+    background-color: var(--color-secondary);
+    color: var(--color-text-white);
+    font-weight: 500;
+    text-align: center;
+    border-radius: 6px;
+    padding: 0.2rem 1rem;
+    transition: var(--transition);
 }
 
 .user__action {
