--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
     --transition: all 400ms ease;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, th {
     font-family: "Poppins", sans-serif;
     color: var(--color-text-dark);
 }
@@ -61,6 +61,25 @@ button:hover {
     background-color: var(--color-keempat);
     color: var(--color-text-white);
     transition: var(--transition);
+}
+
+.manage__btn {
+    display: inline-block;
+    padding: 0.75rem 1.8rem;
+    letter-spacing: 0.6px;
+    font-size: 0.8rem;
+    font-family: "Poppins", sans-serif;
+    background-color: var(--color-primary);
+    color: var(--color-text-white);
+    border-radius: 6px;
+    cursor: pointer;
+    transition: var(--transition);
+}
+
+.manage__btn:hover {
+    background-color: var(--color-keempat);
+    color: var(--color-text-white);
+    font-weight: 600;
 }
 
 .container {
