--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     --bg-color-secondary: #D9D9D9;
 
     --container-width-lg: 60%;
-    --container-width-sm: 96%;
+    --container-width-sm: 88%;
 
     --transition: all 400ms ease;
 }
@@ -69,7 +69,7 @@ button:hover {
     letter-spacing: 0.6px;
     font-size: 0.8rem;
     font-family: "Poppins", sans-serif;
-    background-color: var(--color-primary);
+    background-color: var(--color-secondary);
     color: var(--color-text-white);
     border-radius: 6px;
     cursor: pointer;
@@ -92,6 +92,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 0.4rem;
     padding: 1rem;
 }
 
@@ -116,6 +117,11 @@ nav p {
     border: solid 1px var(--color-keempat);
     color: var(--color-keempat);
     font-weight: 700;
+}
+
+.mng__ul {
+    display: flex;
+    gap: 0.3rem;
 }
 
 header form {
@@ -149,6 +155,12 @@ header form span {
     font-size: 1.3rem;
 }
 
+.hamburger, .close {
+    display: none;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
 /*---------------POSTS SECTION----------------*/
 .blogs__container {
     margin-top: 3rem;
@@ -170,7 +182,7 @@ header form span {
     font-weight: 600;
 }
 
-.post__content {
+.homep__content {
     font-family: "Lora", serif;
 }
 
@@ -180,8 +192,9 @@ header form span {
 }
 
 #read-more {
-    margin-left: 0.2rem;
+    font-family: "Poppins", sans-serif;
     color: var(--color-tertiary);
+    font-size: 0.96rem;
     font-weight: 600;
     border-bottom: 1px solid var(--color-tertiary);
     padding-bottom: 0.1rem;
@@ -213,4 +226,56 @@ header form span {
 
 .bx.bx-plus {
     font-size: 1.8rem;
+}
+
+@media screen and (max-width: 767px) {
+    .container {
+        width: var(--container-width-sm);
+    }
+
+    .button__container {
+        gap: 0;
+        justify-content: space-between;
+    }
+
+
+    /*---------------HEADER ICONS----------------*/
+    #logo-img.hide {
+        display: none;
+    }
+
+    #wc.hide {
+        display: none;
+    }
+
+    .hamburger {
+        display: block;
+    }
+    .hamburger.hide {
+        display: none;
+    }
+
+    .close i {
+        font-size: 2rem;
+    }
+    .close {
+        display: none;
+    }
+    .close.active {
+        display: block;
+    }
+
+    .mng__ul {
+        display: none;
+    }
+
+    .mng__ul.active {
+        display: flex;
+    }
+
+    #header-form.flexend {
+        display: flex;
+        flex: 1;
+        justify-content: end;
+    }
 }
